# funflow

./: .gitattributes  .gitignore  .stylish-haskell.yaml  BUILDING.org  DEVELOPMENT.md  Funflow-Base.html  Funflow-Flows-Command.html  Funflow-Flows-Docker.html  Funflow-Flows-Executor.html  Funflow-Flows-Nix.html  Funflow-Flows-Simple.html  Funflow-Flows.html  Funflow-Run.html  Funflow.html  LICENSE  PromiseExample.hs  README.md  README.rst  TestFunflow.hs  cabal.project  default.nix  doc-index.html  doc-index.json  funflow.cabal  funflow2.haddock  funflow2.txt  hie.yaml  index.html  output-recorded  palette.css  redis.nix  shell-dev.nix  shell.nix  stack.yaml  style.css
.circleci/: config.yml
cas-hashable/: cas-hashable.cabal
cas-hashable-s3/: cas-hashable-s3.cabal
cas-hashable-s3/src/Data/CAS/: S3.hs
cas-hashable/src/Data/CAS/: ContentHashable.hs  StoreOrphans.hs
cas/store/: cas-store.cabal  changelog.md  package.yaml
cas/store/src/Data/CAS/: ContentStore.hs  Lock.hs  RemoteCache.hs  StoreOrphans.hs
cas/store/src/Data/CAS/ContentStore/: Notify.hs
cas/store/test/: Test.hs
cas/store/test/CAS/: ContentStore.hs
funflow/: README.rst  TestFunflow.hs  funflow.cabal  package.yaml
funflow-aws/: ChangeLog.md  LICENSE  README.rst  funflow-aws.cabal
funflow-aws/src/Control/FunFlow/AWS/: Effects.hs  S3.hs  Steps.hs
funflow-aws/src/Control/Funflow/AWS/: Effects.hs  S3.hs  Steps.hs
funflow-checkpoints/: ChangeLog.md  LICENSE  README.rst  funflow-checkpoints.cabal
funflow-checkpoints/src/Control/FunFlow/: Checkpoints.hs
funflow-checkpoints/src/Control/Funflow/: Checkpoints.hs
funflow-checkpoints/test/: Tests.hs
funflow-cwl/funflow-cwl/: funflow-cwl.cabal
funflow-cwl/funflow-cwl/app/: FFCwlRunner.hs
funflow-cwl/funflow-cwl/src/Data/: ErrorMonad.hs
funflow-cwl/funflow-cwl/src/Data/Type/: Equality.hs
funflow-cwl/funflow-cwl/test/guide/: 1st-workflow-job.yml  1st-workflow.cwl  echox-job.yml  expression.cwl  inp.cwl  output.txt
funflow-cwl/funflow-cwl/test/rabix/: compile.cwl  simple-example-job.yml
funflow-examples/: ChangeLog.md  README.md  funflow-examples.cabal  package.yaml
funflow-examples/compile-and-run-c-files/: .Main.hs.swp  Main.hs  README.md  compile-and-run-c-files.cabal
funflow-examples/makefile-tool/: LICENSE  README.md  makefile-tool.cabal
funflow-examples/makefile-tool/src/: .Main.hs.swp  Main.hs  Parse.hs  Types.hs
funflow-examples/makefile-tool/src/makefiletest/store/: metadata.db
funflow-examples/makefile-tool/test/: Makefile  functions.h
funflow-examples/makefile-tool/test/makefiletest/store/: complete-0d35544b50eacbf4af9a43caca067e0f3675b3bff5d779dd10f2f474e13b4ea2  complete-2a2f8d46a72756932a372c379ec06d00fba972f93fb8d937185bc424b8271f1d  complete-493fd91884603db151303bc7ab36687a44249acfc9c4ad3bb6f1b06dbae1ec90  complete-4fac2888c12010810bb719201eb53e0224e8a93753bc91ec5d0d0094d24a5db3  complete-51690894b3b25e8e4ada75a99c11900f7f710395cc8b225a8016efe435b4ed96  complete-57bdfb6662d00243937cdb2e7759be45c8baa6353684a047e7680412e8c85cbc  complete-5b2ae33d69d0ab6f07d7aa941513c625227bd27b6f09ce9e85d3eb7f6d739415  complete-8a541bf1b7872bfea8c522b89351b4a94c8e4acda620af818f8a2f6879ea5a0c  complete-b7ebd3dc432447f1555fe5471dd202c4c412e85e4b5d7e54fbcc6b6f9a46c7b1  complete-c6bdaff7912eeaeca890541b496277d3e4cc8fc7c60109890c72f6854439d128  complete-debc617500bf5189305315ae8541f58caf86a6e3a7a42add42b49ce03d7b9142  complete-f20600cd30d02770a932986cc5a1451d4ae016abc45563a6c34388b2ab480e6c  complete-fb4988328d78175489c9869b76913b8c26b11fb1e26e6b006f8f02f67c4d209c  metadata.db
funflow-examples/makefile-tool/test/makefiletest/store/item-13b5312a9496352cdef54fc707f72a844660bcf9336a45e0c5624ad3de3ce854/: script.sh
funflow-examples/makefile-tool/test/makefiletest/store/item-57cfab7297066489b87d46a0e608227cd4196c973f1f675e0e6847056416c156/: script.sh
funflow-examples/makefile-tool/test/makefiletest/store/item-6cbd1da9eb1d32c0c605724eb654120cab541f9f693b35e9f3d34951e82defb2/: hello
funflow-examples/makefile-tool/test/makefiletest/store/item-8879f2601e40db8151744290a2480ccbac2ffaa5091061a8871c6ed0caf3aa2b/: script.sh
funflow-examples/makefile-tool/test/makefiletest/store/item-ebcb8a1ab60ff3c7315acba5e8b66d2ba1bc11dc66848c4af3acc341f9860a2a/: script.sh
funflow-examples/omdb/: Main.hs
funflow-jobs/: ChangeLog.md  LICENSE  README.md  funflow-jobs.cabal
funflow-jobs/src/Control/FunFlow/Jobs/: Redis.hs
funflow-jobs/src/Control/Funflow/Jobs/: Redis.hs
funflow/app/: FFExecutorD.hs
funflow/doc/: example.md  external-dsl.org
funflow/src/: Funflow.hs
funflow/src/Control/: FunFlow.hs  Funflow.hs
funflow/src/Control/Arrow/: AppArrow.hs  Async.hs  Free.hs
funflow/src/Control/FunFlow/: Base.hs  Class.hs  ContentHashable.hs  ContentStore.hs  External.hs  Lock.hs  Orphans.hs  Pretty.hs  Steps.hs
funflow/src/Control/FunFlow/Cache/: TH.hs
funflow/src/Control/FunFlow/Exec/: Redis.hs  RedisJobs.hs  Simple.hs
funflow/src/Control/Funflow/: Base.hs  Class.hs  ContentHashable.hs  ContentStore.hs  Diagram.hs  External.hs  Lock.hs  Pretty.hs  RemoteCache.hs  Steps.hs  Utils.hs
funflow/src/Control/Funflow/Cache/: TH.hs
funflow/src/Control/Funflow/ContentStore/: Notify.hs
funflow/src/Control/Funflow/Exec/: Progress.hs  Simple.hs  Summary.hs
funflow/src/Funflow/: Compat.hs  Config.hs  Flow.hs  Flows.hs  Run.hs  Util.hs
funflow/src/Funflow/Effects/: Command.hs  Docker.hs  Nix.hs  Simple.hs  Store.hs
funflow/src/Funflow/Flow/: Orphans.hs
funflow/src/Funflow/Flows/: Simple.hs
funflow/src/Funflow/Run/: Orphans.hs
funflow/src/Funflow/Tasks/: Docker.hs  Simple.hs  Store.hs
funflow/src/Funflow/Type/Family/: List.hs
funflow/src/System/Directory/: Funflow.hs
funflow/test/: Test.hs  TestFunflow.hs
funflow/test/Control/Arrow/Async/: Tests.hs
funflow/test/FunFlow/: ContentStore.hs  SQLiteCoordinator.hs  TestFlows.hs
funflow/test/Funflow/: ContentStore.hs  SQLiteCoordinator.hs  TestFlows.hs
funflow/test/flows/: TestFunflow.hs
funflow/test/flows/assets/: flow.yaml
funflow/test/unit/: TInstances.hs  TUtils.hs  Unit.hs
(+6483 files in other folders)
