Name:                funflow
Version:             0.1.0
Synopsis:            Workflows with arrows
Description:
        An arrow with resumable computations and logging


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.10
homepage:            https://github.com/glutamate/funflow
bug-reports:         https://github.com/glutamate/funflow
category:            Control
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    src
   default-language:  Haskell2010

   Exposed-modules:
                     Control.FunFlow
                   , Control.FunFlow.Base
                   , Control.FunFlow.Steps
                   , Control.FunFlow.Pretty
                   , Control.FunFlow.Exec.Local
                   , Control.FunFlow.Exec.Simple
                   , Control.FunFlow.Exec.Redis

   Build-depends:
                 base                    >= 4.6 && <5
               , store
               , text
               , containers
               , mtl
               , random
               , pretty
               , bytestring
               , hedis
               , microlens
               , monad-control
               , transformers-base
               , lifted-async

Test-suite test-funflow
  type:       exitcode-stdio-1.0
  default-language:  Haskell2010

  main-is: TestFunflow.hs
  build-depends:       base >=4.6 && <5
                     , funflow
