Name:                funflow
Version:             0.1.0
Synopsis:            Workflows with arrows
Description:
        An arrow with resumable computations and logging


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.10
homepage:            https://github.com/glutamate/funflow
bug-reports:         https://github.com/glutamate/funflow
category:            Control
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    src
   default-language:  Haskell2010

   Exposed-modules:
                     Control.Arrow.Async
                   , Control.Arrow.Free
                   , Control.FunFlow
                   , Control.FunFlow.Base
                   , Control.FunFlow.Utils
                   , Control.FunFlow.ContentHashable
                   , Control.FunFlow.ContentStore
                   , Control.FunFlow.Diagram
                   , Control.FunFlow.External
                   , Control.FunFlow.External.Docker
                   , Control.FunFlow.External.Executor
                   , Control.FunFlow.External.Coordinator
                   , Control.FunFlow.External.Coordinator.Memory
                   , Control.FunFlow.External.Coordinator.Redis
                   , Control.FunFlow.Steps
                   , Control.FunFlow.Pretty
                   , Control.FunFlow.Exec.Simple
                   , Control.FunFlow.Exec.Redis
                   , Control.FunFlow.Exec.RedisJobs
   Build-depends:
                 base                    >= 4.6 && <5
               , async
               , clock
               , constraints
               , hinotify
               , store
               , text
               , containers
               , contravariant
               , cryptonite
               , directory
               , exceptions
               , filepath
               , ghc-prim
               , hostname
               , integer-gmp
               , katip
               , lens
               , memory
               , mtl
               , process
               , random
               , stm
               , text
               , transformers
               , pretty
               , bytestring
               , hedis
               , monad-control
               , transformers-base
               , lifted-async
               , unix
               , safe-exceptions

Executable ffexecutord
  default-language:  Haskell2010
  main-is: app/FFExecutorD.hs
  build-depends:       base >=4.6 && <5
                     , bytestring
                     , funflow
                     , hedis
                     , text
                     , exceptions
                     , optparse-generic

Test-suite test-funflow
  type:       exitcode-stdio-1.0
  default-language:  Haskell2010

  main-is: TestFunflow.hs
  build-depends:       base >=4.6 && <5
                     , funflow
                     , hedis
                     , text
                     , exceptions
                     , unix

Test-suite unit-tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Test.hs
  other-modules:      FunFlow.ContentStore
                      FunFlow.TestFlows
                      Control.Arrow.Async.Tests
  ghc-options:        -Wall
  build-depends:      base
                    , async
                    , containers
                    , directory
                    , filepath
                    , funflow
                    , safe-exceptions
                    , tasty
                    , tasty-hunit
                    , temporary
                    , unix
