Name:                funflow
Version:             0.1.0
Synopsis:            Workflows with arrows
Description:
        An arrow with resumable computations and logging


License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen, Nicholas Clarke, Andreas Herrmann
Maintainer:          tom.nielsen@tweag.io
build-type:          Simple
Cabal-Version: 	     >= 1.10
homepage:            https://github.com/tweag/funflow
bug-reports:         https://github.com/tweag/funflow
category:            Control
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    src
   default-language:  Haskell2010

   Exposed-modules:
                     Control.Arrow.Async
                   , Control.Arrow.Free
                   , Control.FunFlow
                   , Control.FunFlow.Base
                   , Control.FunFlow.Utils
                   , Control.FunFlow.Cache.TH
                   , Control.FunFlow.ContentHashable
                   , Control.FunFlow.ContentStore
                   , Control.FunFlow.Diagram
                   , Control.FunFlow.External
                   , Control.FunFlow.External.Docker
                   , Control.FunFlow.External.Executor
                   , Control.FunFlow.External.Coordinator
                   , Control.FunFlow.External.Coordinator.Memory
                   , Control.FunFlow.External.Coordinator.Redis
                   , Control.FunFlow.Orphans
                   , Control.FunFlow.Steps
                   , Control.FunFlow.Pretty
                   , Control.FunFlow.Exec.Simple
                   , Control.FunFlow.Exec.Redis
                   , Control.FunFlow.Exec.RedisJobs
   Other-modules:
                     Control.FunFlow.ContentStore.Notify
   Build-depends:
                 base                    >= 4.6 && <5
               , aeson                   >= 1.2.3.0
               , async
               , clock
               , constraints
               , data-default
               , scientific
               , store
               , text
               , unordered-containers
               , containers
               , contravariant
               , cryptonite
               , directory
               , exceptions
               , filepath
               , ghc-prim
               , hashable
               , hostname
               , integer-gmp
               , katip                   >= 0.5.0.1
               , lens
               , memory
               , mtl
               , path
               , path-io
               , process
               , random
               , stm
               , sqlite-simple
               , template-haskell >= 2.11
               , text
               , transformers
               , pretty
               , bytestring
               , hedis
               , monad-control
               , transformers-base
               , lifted-async
               , unix
               , vector
               , yaml
   if os(linux)
     CPP-options: -DOS_Linux
     Other-modules: Control.FunFlow.ContentStore.Notify.Linux
     Build-depends: hinotify
   else
     if os(darwin) || os(freebsd)
       CPP-options: -DOS_BSD
       Other-modules: Control.FunFlow.ContentStore.Notify.BSD
       Build-depends: kqueue

Executable ffexecutord
  default-language:  Haskell2010
  main-is: app/FFExecutorD.hs
  build-depends:       base >=4.6 && <5
                     , bytestring
                     , funflow
                     , hedis
                     , path
                     , text
                     , exceptions
                     , optparse-generic

Test-suite test-funflow
  type:       exitcode-stdio-1.0
  default-language:  Haskell2010

  main-is: TestFunflow.hs
  ghc-options:        -Wall -threaded
  build-depends:       base >=4.6 && <5
                     , funflow
                     , filepath
                     , hedis
                     , path
                     , path-io
                     , text
                     , exceptions
                     , unix

Test-suite unit-tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Test.hs
  other-modules:      FunFlow.ContentStore
                      FunFlow.TestFlows
                      Control.Arrow.Async.Tests
  ghc-options:        -Wall -threaded
  build-depends:      base
                    , async
                    , containers
                    , data-default >= 0.7
                    , directory
                    , filepath
                    , funflow
                    , path
                    , path-io
                    , random
                    , safe-exceptions
                    , tasty
                    , tasty-hunit
                    , temporary
                    , unix
