name:                funflow-aws
version:             0.1.0.0
synopsis:            Tools for flows which interact with AWS
homepage:            https://github.com/tweag/funflow
license:             MIT
license-file:        LICENSE
author:              Nicholas Clarke
maintainer:          nick@topos.org.uk
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
                     README.rst
cabal-version:       >=1.10

library
  exposed-modules:     Control.Funflow.AWS.S3
                       Control.Funflow.AWS.Effects
                       Control.Funflow.AWS.Steps
  build-depends:       base >=4.9 && <5
                     , funflow
                     , aeson
                     , aws
                     , conduit
                     , conduit-extra
                     , constraints
                     , http-conduit
                     , lens
                     , path
                     , path-io
                     , reflection
                     , resourcet
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
