name:                funflow-checkpoints
version:             0.1.0.0
synopsis:            Checkpoint functionality for funflow workflows.
homepage:            https://github.com/tweag/funflow
license:             BSD3
license-file:        LICENSE
author:              Nicholas Clarke
maintainer:          nick@topos.org.uk
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:       Control.Funflow.Checkpoints
  build-depends:       base >=4.10 && <4.11
                     , funflow
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-suite unit-tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Tests.hs
  ghc-options:        -Wall -threaded
  build-depends:      base
                    , funflow
                    , funflow-checkpoints
                    , path-io
                    , safe-exceptions
                    , tasty
                    , tasty-hunit
