name:                funflow-jobs
version:             0.2.0.0
synopsis:            Support for distribution of flows in funflow.
homepage:            https://github.com/tweag/funflow
license:             BSD3
license-file:        LICENSE
author:              Tom Nielsen
maintainer:          nick@topos.org.uk
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
                     Control.Funflow.Jobs.Redis
  build-depends:       base >=4.9 && <5
                     , bytestring
                     , exceptions
                     , funflow
                     , hedis
                     , lens
                     , monad-control
                     , mtl
                     , store
                     , text
                     , transformers-base
  hs-source-dirs:      src
  default-language:    Haskell2010
