Name:                funflow
Version:             1.5.0
Synopsis:            Workflows with arrows
Description:
        An arrow with resumable computations and logging

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen, Nicholas Clarke, Andreas Herrmann
Maintainer:          nicholas.clarke@tweag.io
build-type:          Simple
Cabal-Version:       >= 1.10
homepage:            https://github.com/tweag/funflow
bug-reports:         https://github.com/tweag/funflow
category:            Control
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1

extra-source-files:
                   changelog.md

Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    src
   default-language:  Haskell2010

   Exposed-modules:
                     Control.Arrow.AppArrow
                   , Control.Arrow.Async
                   , Control.Arrow.Free
                   , Control.Funflow
                   , Control.Funflow.Cache.TH
                   , Control.Funflow.ContentHashable
                   , Control.Funflow.ContentStore
                   , Control.Funflow.Diagram
                   , Control.Funflow.External
                   , Control.Funflow.External.Docker
                   , Control.Funflow.External.Executor
                   , Control.Funflow.External.Coordinator
                   , Control.Funflow.External.Coordinator.Memory
                   , Control.Funflow.External.Coordinator.Redis
                   , Control.Funflow.External.Coordinator.SQLite
                   , Control.Funflow.Lock
                   , Control.Funflow.Orphans
                   , Control.Funflow.RemoteCache
                   , Control.Funflow.Steps
                   , Control.Funflow.Pretty
                   , Control.Funflow.Exec.Simple
   Other-modules:
                     Control.Funflow.Base
                   , Control.Funflow.Class
                   , Control.Funflow.ContentStore.Notify
   Build-depends:
                 base                    >= 4.6 && <5
               , Glob
               , aeson                   >= 1.2.3.0
               , async
               , bytestring
               , clock
               , constraints
               , containers
               , contravariant
               , cryptonite
               , data-default
               , directory
               , exceptions
               , filepath
               , ghc-prim
               , hashable
               , hedis
               , hostname
               , integer-gmp
               , katip                   >= 0.8.0.0
               , lens
               , lifted-async
               , memory
               , monad-control
               , mtl
               , path                    > 0.6.0
               , path-io
               , pretty
               , process
               , random
               , safe-exceptions
               , scientific
               , sqlite-simple
               , stm
               , store
               , tar
               , template-haskell >= 2.11
               , text
               , time
               , transformers
               , unix
               , unordered-containers
               , vector
               , yaml
   if os(linux)
     CPP-options: -DOS_Linux
     Other-modules: Control.Funflow.ContentStore.Notify.Linux
     Build-depends: hinotify             >= 0.3.9
   else
     if os(darwin) || os(freebsd)
       CPP-options: -DOS_BSD
       Other-modules: Control.Funflow.ContentStore.Notify.BSD
       Build-depends: kqueue

Executable ffexecutord
  default-language:  Haskell2010
  main-is: app/FFExecutorD.hs
  build-depends:       base >=4.6 && <5
                     , bytestring
                     , clock
                     , funflow
                     , hedis >= 0.12.5
                     , network
                     , path
                     , text
                     , unix
                     , safe-exceptions
                     , optparse-applicative

Test-suite test-funflow
  type:       exitcode-stdio-1.0
  default-language:  Haskell2010

  main-is: TestFunflow.hs
  ghc-options:        -Wall -threaded
  build-depends:       base >=4.6 && <5
                     , data-default
                     , funflow
                     , filepath
                     , hedis >= 0.12.5
                     , path
                     , path-io
                     , text
                     , safe-exceptions
                     , unix

Test-suite unit-tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Test.hs
  other-modules:      Funflow.ContentStore
                      Funflow.SQLiteCoordinator
                      Funflow.TestFlows
                      Control.Arrow.Async.Tests
  ghc-options:        -Wall -threaded
  build-depends:      base
                    , async
                    , containers
                    , data-default >= 0.7
                    , directory
                    , filepath
                    , funflow
                    , path
                    , path-io
                    , process
                    , random
                    , safe-exceptions
                    , tasty
                    , tasty-hunit
                    , temporary
                    , unix
