name:                funflow-cwl
version:             0.1.0.0
synopsis:            A CWL implementation using Funflow.
homepage:            https://github.com/githubuser/cwl-funflow#readme
license:             BSD3
license-file:        LICENSE
author:              Divesh Otwani
maintainer:          divesh.otwani@tweag.io
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , funflow
                     , hashable
                     , ilist
                     , katip
                     , parsec
                     , path
                     , path-io
                     , process
                     , scientific
                     , text
                     , transformers
                     , unordered-containers
                     , vector
                     , yaml
  exposed-modules:
                       Data.Nat
                     , Data.HList
                     , Data.Vec
                     , Data.Graph
                     , Data.ErrorMonad
                     , Data.Existentials
                     , Data.Type.Equality

                     , Control.Funflow.CWL.Types
                     , Control.Funflow.CWL.Parse
                     , Control.Funflow.CWL.PreProcess
                     , Control.Funflow.CWL.Convert
                     , Control.Funflow.CWL.Run

                     , Control.Funflow.CWL.Types.CWLTypes
                     , Control.Funflow.CWL.Types.FunflowTypes
                     , Control.Funflow.CWL.Types.Schema

                     , Control.Funflow.CWL.Util.StringParse
                     , Control.Funflow.CWL.Util.CWLUtil

                     , Control.Funflow.CWL.Convert.Job
                     , Control.Funflow.CWL.Convert.Tool
                     , Control.Funflow.CWL.Convert.FlowCmdWrapper
                     , Control.Funflow.CWL.Convert.Workflow
                     , Control.Funflow.CWL.Convert.Wiring
                     , Control.Funflow.CWL.Convert.Scatter
  other-modules:

executable ffcwlrunner
  hs-source-dirs:      app
  main-is:             FFCwlRunner.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , funflow
                     , funflow-cwl
                     , hedis
                     , network
                     , optparse-applicative
                     , path
                     , path-io


Test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , funflow
                     , funflow-cwl
                     , path
                     , path-io
                     , safe-exceptions
                     , tasty
                     , tasty-hunit
                     , transformers
                     , yaml


